generated/HyraParser.cpp

// Generated from e:\C++Projects\Hyc\meta\Hyra.g4 by ANTLR 4.7.1


#include "HyraListener.h"
#include "HyraVisitor.h"

#include "HyraParser.h"


using namespace antlrcpp;
using namespace antlr4;

HyraParser::HyraParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HyraParser::~HyraParser() {
  delete _interpreter;
}

std::string HyraParser::getGrammarFileName() const {
  return "Hyra.g4";
}

const std::vector<std::string>& HyraParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HyraParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

HyraParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HyraParser::StmtListContext* HyraParser::CompilationUnitContext::stmtList() {
  return getRuleContext<HyraParser::StmtListContext>(0);
}

tree::TerminalNode* HyraParser::CompilationUnitContext::EOF() {
  return getToken(HyraParser::EOF, 0);
}


size_t HyraParser::CompilationUnitContext::getRuleIndex() const {
  return HyraParser::RuleCompilationUnit;
}

void HyraParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void HyraParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}


antlrcpp::Any HyraParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::CompilationUnitContext* HyraParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, HyraParser::RuleCompilationUnit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    stmtList();
    setState(27);
    match(HyraParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

HyraParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HyraParser::ExprContext::getRuleIndex() const {
  return HyraParser::RuleExpr;
}

void HyraParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignmentExprContext ------------------------------------------------------------------

HyraParser::PatternContext* HyraParser::AssignmentExprContext::pattern() {
  return getRuleContext<HyraParser::PatternContext>(0);
}

HyraParser::ExprContext* HyraParser::AssignmentExprContext::expr() {
  return getRuleContext<HyraParser::ExprContext>(0);
}

HyraParser::AssignmentExprContext::AssignmentExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::AssignmentExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentExpr(this);
}
void HyraParser::AssignmentExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentExpr(this);
}

antlrcpp::Any HyraParser::AssignmentExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitAssignmentExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivModExprContext ------------------------------------------------------------------

std::vector<HyraParser::ExprContext *> HyraParser::MulDivModExprContext::expr() {
  return getRuleContexts<HyraParser::ExprContext>();
}

HyraParser::ExprContext* HyraParser::MulDivModExprContext::expr(size_t i) {
  return getRuleContext<HyraParser::ExprContext>(i);
}

HyraParser::MulDivModExprContext::MulDivModExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::MulDivModExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulDivModExpr(this);
}
void HyraParser::MulDivModExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulDivModExpr(this);
}

antlrcpp::Any HyraParser::MulDivModExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitMulDivModExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BitwiseNegateExprContext ------------------------------------------------------------------

HyraParser::ExprContext* HyraParser::BitwiseNegateExprContext::expr() {
  return getRuleContext<HyraParser::ExprContext>(0);
}

HyraParser::BitwiseNegateExprContext::BitwiseNegateExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::BitwiseNegateExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBitwiseNegateExpr(this);
}
void HyraParser::BitwiseNegateExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBitwiseNegateExpr(this);
}

antlrcpp::Any HyraParser::BitwiseNegateExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitBitwiseNegateExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BitwiseOrExprContext ------------------------------------------------------------------

std::vector<HyraParser::ExprContext *> HyraParser::BitwiseOrExprContext::expr() {
  return getRuleContexts<HyraParser::ExprContext>();
}

HyraParser::ExprContext* HyraParser::BitwiseOrExprContext::expr(size_t i) {
  return getRuleContext<HyraParser::ExprContext>(i);
}

HyraParser::BitwiseOrExprContext::BitwiseOrExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::BitwiseOrExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBitwiseOrExpr(this);
}
void HyraParser::BitwiseOrExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBitwiseOrExpr(this);
}

antlrcpp::Any HyraParser::BitwiseOrExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitBitwiseOrExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BitwiseAndExprContext ------------------------------------------------------------------

std::vector<HyraParser::ExprContext *> HyraParser::BitwiseAndExprContext::expr() {
  return getRuleContexts<HyraParser::ExprContext>();
}

HyraParser::ExprContext* HyraParser::BitwiseAndExprContext::expr(size_t i) {
  return getRuleContext<HyraParser::ExprContext>(i);
}

HyraParser::BitwiseAndExprContext::BitwiseAndExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::BitwiseAndExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBitwiseAndExpr(this);
}
void HyraParser::BitwiseAndExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBitwiseAndExpr(this);
}

antlrcpp::Any HyraParser::BitwiseAndExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitBitwiseAndExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddSubExprContext ------------------------------------------------------------------

std::vector<HyraParser::ExprContext *> HyraParser::AddSubExprContext::expr() {
  return getRuleContexts<HyraParser::ExprContext>();
}

HyraParser::ExprContext* HyraParser::AddSubExprContext::expr(size_t i) {
  return getRuleContext<HyraParser::ExprContext>(i);
}

HyraParser::AddSubExprContext::AddSubExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::AddSubExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAddSubExpr(this);
}
void HyraParser::AddSubExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAddSubExpr(this);
}

antlrcpp::Any HyraParser::AddSubExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitAddSubExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenExprContext ------------------------------------------------------------------

HyraParser::ExprContext* HyraParser::ParenExprContext::expr() {
  return getRuleContext<HyraParser::ExprContext>(0);
}

HyraParser::ParenExprContext::ParenExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::ParenExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParenExpr(this);
}
void HyraParser::ParenExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParenExpr(this);
}

antlrcpp::Any HyraParser::ParenExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitParenExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstExprContext ------------------------------------------------------------------

HyraParser::ConstantExprContext* HyraParser::ConstExprContext::constantExpr() {
  return getRuleContext<HyraParser::ConstantExprContext>(0);
}

HyraParser::ConstExprContext::ConstExprContext(ExprContext *ctx) { copyFrom(ctx); }

void HyraParser::ConstExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstExpr(this);
}
void HyraParser::ConstExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstExpr(this);
}

antlrcpp::Any HyraParser::ConstExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitConstExpr(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::ExprContext* HyraParser::expr() {
   return expr(0);
}

HyraParser::ExprContext* HyraParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  HyraParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  HyraParser::ExprContext *previousContext = _localctx;
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, HyraParser::RuleExpr, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ParenExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(30);
      match(HyraParser::T__0);
      setState(31);
      expr(0);
      setState(32);
      match(HyraParser::T__1);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ConstExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(34);
      constantExpr();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<AssignmentExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(35);
      dynamic_cast<AssignmentExprContext *>(_localctx)->lh = pattern();
      setState(36);
      match(HyraParser::T__10);
      setState(37);
      dynamic_cast<AssignmentExprContext *>(_localctx)->rh = expr(1);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(57);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(55);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<BitwiseOrExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lh = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(41);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(42);
          match(HyraParser::T__2);
          setState(43);
          dynamic_cast<BitwiseOrExprContext *>(_localctx)->rh = expr(7);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<BitwiseAndExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lh = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(44);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(45);
          match(HyraParser::T__4);
          setState(46);
          dynamic_cast<BitwiseAndExprContext *>(_localctx)->rh = expr(5);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<AddSubExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lh = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(47);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(48);
          dynamic_cast<AddSubExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == HyraParser::T__5

          || _la == HyraParser::T__6)) {
            dynamic_cast<AddSubExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(49);
          dynamic_cast<AddSubExprContext *>(_localctx)->rh = expr(4);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<MulDivModExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lh = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(50);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(51);
          dynamic_cast<MulDivModExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << HyraParser::T__7)
            | (1ULL << HyraParser::T__8)
            | (1ULL << HyraParser::T__9))) != 0))) {
            dynamic_cast<MulDivModExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(52);
          dynamic_cast<MulDivModExprContext *>(_localctx)->rh = expr(3);
          break;
        }

        case 5: {
          auto newContext = _tracker.createInstance<BitwiseNegateExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lh = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(53);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(54);
          match(HyraParser::T__3);
          break;
        }

        } 
      }
      setState(59);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ConstantExprContext ------------------------------------------------------------------

HyraParser::ConstantExprContext::ConstantExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HyraParser::LiteralContext* HyraParser::ConstantExprContext::literal() {
  return getRuleContext<HyraParser::LiteralContext>(0);
}

HyraParser::IdentifierContext* HyraParser::ConstantExprContext::identifier() {
  return getRuleContext<HyraParser::IdentifierContext>(0);
}


size_t HyraParser::ConstantExprContext::getRuleIndex() const {
  return HyraParser::RuleConstantExpr;
}

void HyraParser::ConstantExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstantExpr(this);
}

void HyraParser::ConstantExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstantExpr(this);
}


antlrcpp::Any HyraParser::ConstantExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitConstantExpr(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::ConstantExprContext* HyraParser::constantExpr() {
  ConstantExprContext *_localctx = _tracker.createInstance<ConstantExprContext>(_ctx, getState());
  enterRule(_localctx, 4, HyraParser::RuleConstantExpr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HyraParser::DecIntegerLiteral:
      case HyraParser::FloatLiteral: {
        enterOuterAlt(_localctx, 1);
        setState(60);
        literal();
        break;
      }

      case HyraParser::Identifier: {
        enterOuterAlt(_localctx, 2);
        setState(61);
        identifier();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

HyraParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HyraParser::AtomicStmtContext* HyraParser::StmtContext::atomicStmt() {
  return getRuleContext<HyraParser::AtomicStmtContext>(0);
}

HyraParser::DecStmtContext* HyraParser::StmtContext::decStmt() {
  return getRuleContext<HyraParser::DecStmtContext>(0);
}

HyraParser::BlockStmtContext* HyraParser::StmtContext::blockStmt() {
  return getRuleContext<HyraParser::BlockStmtContext>(0);
}


size_t HyraParser::StmtContext::getRuleIndex() const {
  return HyraParser::RuleStmt;
}

void HyraParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void HyraParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any HyraParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::StmtContext* HyraParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, HyraParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HyraParser::T__0:
      case HyraParser::Identifier:
      case HyraParser::DecIntegerLiteral:
      case HyraParser::FloatLiteral: {
        enterOuterAlt(_localctx, 1);
        setState(64);
        atomicStmt();
        break;
      }

      case HyraParser::T__12: {
        enterOuterAlt(_localctx, 2);
        setState(65);
        decStmt();
        break;
      }

      case HyraParser::T__13:
      case HyraParser::T__14: {
        enterOuterAlt(_localctx, 3);
        setState(66);
        blockStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtListContext ------------------------------------------------------------------

HyraParser::StmtListContext::StmtListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HyraParser::StmtContext *> HyraParser::StmtListContext::stmt() {
  return getRuleContexts<HyraParser::StmtContext>();
}

HyraParser::StmtContext* HyraParser::StmtListContext::stmt(size_t i) {
  return getRuleContext<HyraParser::StmtContext>(i);
}


size_t HyraParser::StmtListContext::getRuleIndex() const {
  return HyraParser::RuleStmtList;
}

void HyraParser::StmtListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtList(this);
}

void HyraParser::StmtListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtList(this);
}


antlrcpp::Any HyraParser::StmtListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitStmtList(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::StmtListContext* HyraParser::stmtList() {
  StmtListContext *_localctx = _tracker.createInstance<StmtListContext>(_ctx, getState());
  enterRule(_localctx, 8, HyraParser::RuleStmtList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HyraParser::T__0)
      | (1ULL << HyraParser::T__12)
      | (1ULL << HyraParser::T__13)
      | (1ULL << HyraParser::T__14)
      | (1ULL << HyraParser::Identifier)
      | (1ULL << HyraParser::DecIntegerLiteral)
      | (1ULL << HyraParser::FloatLiteral))) != 0)) {
      setState(69);
      stmt();
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtomicStmtContext ------------------------------------------------------------------

HyraParser::AtomicStmtContext::AtomicStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HyraParser::ExprContext* HyraParser::AtomicStmtContext::expr() {
  return getRuleContext<HyraParser::ExprContext>(0);
}


size_t HyraParser::AtomicStmtContext::getRuleIndex() const {
  return HyraParser::RuleAtomicStmt;
}

void HyraParser::AtomicStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtomicStmt(this);
}

void HyraParser::AtomicStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtomicStmt(this);
}


antlrcpp::Any HyraParser::AtomicStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitAtomicStmt(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::AtomicStmtContext* HyraParser::atomicStmt() {
  AtomicStmtContext *_localctx = _tracker.createInstance<AtomicStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, HyraParser::RuleAtomicStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    expr(0);
    setState(76);
    match(HyraParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecStmtContext ------------------------------------------------------------------

HyraParser::DecStmtContext::DecStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HyraParser::PatternContext* HyraParser::DecStmtContext::pattern() {
  return getRuleContext<HyraParser::PatternContext>(0);
}

HyraParser::ExprContext* HyraParser::DecStmtContext::expr() {
  return getRuleContext<HyraParser::ExprContext>(0);
}


size_t HyraParser::DecStmtContext::getRuleIndex() const {
  return HyraParser::RuleDecStmt;
}

void HyraParser::DecStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecStmt(this);
}

void HyraParser::DecStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecStmt(this);
}


antlrcpp::Any HyraParser::DecStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitDecStmt(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::DecStmtContext* HyraParser::decStmt() {
  DecStmtContext *_localctx = _tracker.createInstance<DecStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, HyraParser::RuleDecStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(HyraParser::T__12);
    setState(79);
    pattern();
    setState(80);
    match(HyraParser::T__10);
    setState(81);
    expr(0);
    setState(82);
    match(HyraParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockStmtContext ------------------------------------------------------------------

HyraParser::BlockStmtContext::BlockStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HyraParser::IfStmtContext* HyraParser::BlockStmtContext::ifStmt() {
  return getRuleContext<HyraParser::IfStmtContext>(0);
}

HyraParser::SimpleBlockStmtContext* HyraParser::BlockStmtContext::simpleBlockStmt() {
  return getRuleContext<HyraParser::SimpleBlockStmtContext>(0);
}


size_t HyraParser::BlockStmtContext::getRuleIndex() const {
  return HyraParser::RuleBlockStmt;
}

void HyraParser::BlockStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockStmt(this);
}

void HyraParser::BlockStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HyraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockStmt(this);
}


antlrcpp::Any HyraParser::BlockStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HyraVisitor*>(visitor))
    return parserVisitor->visitBlockStmt(this);
  else
    return visitor->visitChildren(this);
}

HyraParser::BlockStmtContext* HyraParser::blockStmt() {
  BlockStmtContext *_localctx = _tracker.createInstance<BlockStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, HyraParser::RuleBlockStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HyraParser::T__13: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        ifStmt();
        break;
      }

      case HyraParser::T__14: {
        enterOuterAlt(_localctx, 2);
        setState(85);
        simpleBlockStmt();
        break;
      }
